INSTALL.txt


    $ git clone https://github.com/monetas/ot-android.git

    $ cd ot-android

    $ git submodule init
    $ git submodule update

-----------------------------------------

Install the protobuf compiler (protoc) version specified in getProtobufLibrary.sh (2.5.0 currently) on your system.  Usually done by installing some sort protobuf package.

You can verify the version using:  
    $ protoc --version

-----------------------------------------

Download and configure the protobuf package:

    $ getProtobufLibrary.sh

NOTE: If you want to tweak the specifics of the Android platform and version,
      you should look at the exports in this file, and the configure line.
      This information comes from the comments at the top of ot/protobuf.mk

-----------------------------------------

// NOTE: the version of protobuf on your system must be the same
// as the version of protobuf in the submodule, before you genproto.

    $ ./genproto.sh

-----------------------------------------

    $ cp ot/ot_config.h ot/Open-Transactions/include/otlib/

(NOTE: Might want to scroll through this file and make sure it looks cool...
 I basically had to create it by hand since I couldn't get configure script working)

-----------------------------------------

    $ cp ot/platform.hpp ot/zeromq/src/


TO BUILD:

    $ ndk-build


-----------------------------------------


WARNING:
The current version of OT has a build error on Android:

[armeabi-v7a] Compile++ thumb: otapi <= OTAPI-java.cxx
/Users/au/Projects/ot-android/ot/Open-Transactions/swig/otapi/OTAPI-java.cxx: In function 'jlong Java_org_opentransactions_otapi_otapiJNI_imaxabs(JNIEnv*, jclass, jlong)':
/Users/au/Projects/ot-android/ot/Open-Transactions/swig/otapi/OTAPI-java.cxx:1035:34: error: 'imaxabs' was not declared in this scope
   result = (intmax_t)imaxabs(arg1);
                                  ^
/Users/au/Projects/ot-android/ot/Open-Transactions/swig/otapi/OTAPI-java.cxx: In function 'jlong Java_org_opentransactions_otapi_otapiJNI_imaxdiv(JNIEnv*, jclass, jlong, jlong)':
/Users/au/Projects/ot-android/ot/Open-Transactions/swig/otapi/OTAPI-java.cxx:1051:29: error: 'imaxdiv' was not declared in this scope
   result = imaxdiv(arg1,arg2);
                             ^
make: *** [obj/local/armeabi-v7a/objs/otapi/Open-Transactions/swig/otapi/OTAPI-java.o] Error 1

-----------------------------------------

WORKAROUND:

--- Open the file:  ot-android/ot/Open-Transactions/swig/otapi/OTAPI-java.cxx

--- At line 1041, erase the entire function named: Java_org_opentransactions_otapi_otapiJNI_imaxdiv

--- At line 1027, erase the entire function named: Java_org_opentransactions_otapi_otapiJNI_imaxabs

--- Save and close. Then:

    $ ndk-build



